--- a/DarkSpace/DarkSpace.vcxproj.filters
+++ b/DarkSpace/DarkSpace.vcxproj.filters
@@ -603,6 +603,9 @@
     <ClInclude Include="TierInfo.h">
       <Filter>Data</Filter>
     </ClInclude>
+    <ClInclude Include="GadgetReduceRange.h">
+      <Filter>Gadgets</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Universe.rc">
@@ -1106,6 +1109,9 @@
     </ClCompile>
     <ClCompile Include="TierInfo.cpp">
       <Filter>Data</Filter>
+    </ClCompile>
+    <ClCompile Include="GadgetReduceRange.cpp">
+      <Filter>Gadgets</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
