--- a/Gadgets/Gadgets.vcxproj.filters
+++ b/Gadgets/Gadgets.vcxproj.filters
@@ -746,6 +746,9 @@
     <ClInclude Include="WeaponWibbleCannonHV.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ReduceRange.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="makefile" />
